@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="sallyAPI"
 	ProjectGUID="{378E177D-7EB5-4DAD-87EB-77EF96E95625}"
 	RootNamespace="sallyAPI"
